--- a/_news/2020-05-06.md
+++ b/_news/2020-05-06.md
@@ -4,4 +4,4 @@ date: 2020-05-05 08:06:00-0400
 inline: true
 ---
 
-[r-env-singularity](https://docs.csc.fi/apps/r-env-singularity/) is out.
+New R environment on CSC's Puhti HPC cluster: [r-env-singularity](https://docs.csc.fi/apps/r-env-singularity/)
