--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -223,3 +223,14 @@
   publisher={Mary Ann Liebert, Inc., publishers 140 Huguenot Street, 3rd Floor New~…}
 }
 
+@article{cockell2019sample,
+  title={Sample Collection and Return from Mars: Optimising Sample Collection Based on the Microbial Ecology of Terrestrial Volcanic Environments},
+  author={Cockell, Charles S and McMahon, Sean and Lim, Darlene SS and Rummel, John and Stevens, Adam and Hughes, Scott S and Nawotniak, Shannon E Kobs and Brady, Allyson L and Marteinsson, Viggo and Martin-Torres, Javier and others},
+  journal={Space Science Reviews},
+  volume={215},
+  number={7},
+  pages={44},
+  year={2019},
+  publisher={Springer Netherlands}
+}
+
