--- a/_news/2020-08-25.md
+++ b/_news/2020-08-25.md
@@ -4,4 +4,4 @@ date: 2020-08-25 09:33:00-0400
 inline: true
 ---
 
-New paper in Front Environ Sci: [microplastics in wastewater](https://www.frontiersin.org/articles/10.3389/fenvs.2020.00145/full)
+Paper in Front Environ Sci: [microplastics in wastewater](https://www.frontiersin.org/articles/10.3389/fenvs.2020.00145/full)
