--- a/_news/2020-09-16.md
+++ b/_news/2020-09-16.md
@@ -4,6 +4,6 @@ date: 2020-09-16 11:19:00-0400
 inline: true
 ---
 
-New paper in Environ Microbiol: [degraders of LDPE-derived compounds](https://sfamjournals.onlinelibrary.wiley.com/doi/10.1111/1462-2920.15232)
+Paper in Environ Microbiol: [degraders of LDPE-derived compounds](https://sfamjournals.onlinelibrary.wiley.com/doi/10.1111/1462-2920.15232)
 
 
