--- a/_news/2021-12-13.md
+++ b/_news/2021-12-13.md
@@ -4,4 +4,4 @@ date: 2021-12-13 08:06:00-0400
 inline: true
 ---
 
-Research topic in Front Big Data: [HPC applications in life sciences](/home/jharriso/git/jessepharrison.github.io/_news/2021-06-22.md)
+Research topic in Front Big Data: [HPC applications in life sciences](https://www.frontiersin.org/research-topics/29689/high-performance-computing-applications-in-life-sciences)
