--- a/_news/2022-09-16.md
+++ b/_news/2022-09-16.md
@@ -4,4 +4,4 @@ date: 2022-09-16 11:19:00-0400
 inline: true
 ---
 
-[BioDT webinar on use cases on 27 Sep 2022](https://biodt.eu/events/use-cases-demonstrators-biodiversity-digital-twin-prototype)
+[BioDT vacancies page established](https://biodt.eu/vacancies)
