--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ project:
   output-dir: docs
 
 title: "Jesse Harrison"
-description: "Senior Data Scientist / Project Manager (CSC - IT Center for Science Ltd)"
+description: "Development Manager (CSC - IT Center for Science Ltd)"
 image: static/prof_pic.jpg
 about: 
   template: trestles
@@ -15,17 +15,17 @@ about:
       href: https://www.linkedin.com/in/jessepharrison/
     - text: GitHub
       href: https://github.com/jessepharrison
-    - text: Twitter
-      href: https://twitter.com/jessepharrison
+    - text: Bluesky
+      href: https://bsky.app/profile/jesseharrison.bsky.social
     - text: Email
       href: mailto:jesse.harrison@csc.fi    
 ---
 
 #### **About**
 
-I work as a Senior Data Scientist and Project Manager at CSC - IT Center for Science, where my current tasks involve leading the [Horizon Europe BioDT project](https://biodt.eu/) and serving as a Work Package lead for [H2020 PerMedCoE](https://permedcoe.eu/). 
+I work as a Development Manager at CSC - IT Center for Science, where my current tasks involve leading the AI & Data Analytics (AIDA) group. I have also worked as the Scientific Coordinator of the [Horizon Europe BioDT project](https://biodt.eu/) and as a Work Package lead for [H2020 PerMedCoE](https://permedcoe.eu/).
 
-I also hold the title of Docent (Associate Professor) in Environmental Sciences at the [University of Helsinki](https://www.helsinki.fi/en/faculty-biological-and-environmental-sciences).
+I hold the title of Docent (Associate Professor) in Environmental Sciences at the [University of Helsinki](https://www.helsinki.fi/en/faculty-biological-and-environmental-sciences).
 
 My previous responsibilities have included R environment design and support on CSC computing platforms, bioinformatics software tool development, and teaching courses on R and bioinformatics.
 
@@ -35,7 +35,7 @@ Prior to joining CSC, I worked as a postdoctoral researcher at the Universities 
 
 #### **Further details**
 
--   [See my resume](static/harrison_cv_jul23.pdf) for more information.
+-   [See my resume](static/harrison_resume.pdf) for more information.
 -   I also have a [website for art](https://www.jesse-harrison.com/).
 
 ------------------------------------------------------------------------
