--- a/index.qmd
+++ b/index.qmd
@@ -23,13 +23,9 @@ about:
 
 #### **About**
 
-I work as a Development Manager at CSC - IT Center for Science, where my current tasks involve leading the AI & Data Analytics (AIDA) group. I have also worked as the Scientific Coordinator of the [Horizon Europe BioDT project](https://biodt.eu/) and as a Work Package lead for [H2020 PerMedCoE](https://permedcoe.eu/).
+I work as the Development Manager of the [AI & Data Analytics (AIDA) group](https://csc.fi/en/our-expertise/ai-and-data-analytics/) at CSC - IT Center for Science. My previous roles at CSC have included working as the Scientific Coordinator of the [Horizon Europe BioDT project](https://biodt.eu/) and as a Senior Data Scientist. 
 
-I hold the title of Docent (Associate Professor) in Environmental Sciences at the [University of Helsinki](https://www.helsinki.fi/en/faculty-biological-and-environmental-sciences).
-
-My previous responsibilities have included R environment design and support on CSC computing platforms, bioinformatics software tool development, and teaching courses on R and bioinformatics.
-
-Prior to joining CSC, I worked as a postdoctoral researcher at the Universities of Edinburgh, Vienna, Helsinki and Turku.
+I hold the title of Docent (Associate Professor) in Environmental Sciences at the [University of Helsinki](https://www.helsinki.fi/en/faculty-biological-and-environmental-sciences). Prior to joining CSC, I worked as a postdoctoral researcher at the Universities of Edinburgh, Vienna, Helsinki and Turku.
 
 ------------------------------------------------------------------------
 
