--- a/publications.qmd
+++ b/publications.qmd
@@ -11,6 +11,8 @@ title: "Publications"
 
 <small>
 
+24\. [Developing Prototype Digital Twins for biodiversity conservation and management: achievements, challenges and perspectives](https://riojournal.com/article/133474/). 2024. Lecarpentier D, Biro T, Endresen D, Golivets M, Grimm V, Islam S, Koivula H, Pleiter D, Rossi T, Schigel D, Wohner C, Zuquim G, **Harrison JP**. *Research Ideas and Outcomes* 10:e133474.
+
 23\. [Year-long microbial succession on microplastics in wastewater: chaotic dynamics outweigh preferential growth](https://www.mdpi.com/2076-2607/10/9/1775). 2022. Tagg AS, Sperlea T, Labrenz M, **Harrison JP**, Ojeda JJ, Sapp M. *Microorganisms* 10:1775.
 
 22\. [16S and 18S rRNA gene metabarcoding provide congruent information on the responses of sediment communities to eutrophication](https://www.frontiersin.org/articles/10.3389/fmars.2021.708716/abstract). 2021. **Harrison JP**, Chronopoulou M, Salonen I, Jilbert T, Koho K. *Frontiers in Marine Science* 8:708716.
@@ -75,7 +77,7 @@ title: "Publications"
 
 <small>
 
-3. [BioDT D1.2 - Data management plan](https://ec.europa.eu/research/participants/documents/downloadPublic?documentIds=080166e5f44bcefb&appId=PPGMS). 2022. **Harrison JP**, Allas A-L, Koivula H, Blankett R.
+3. [BioDT D1.2 - Data management plan](https://ec.europa.eu/research/participants/documents/downloadPublic?documentIds=080166e50d084539&appId=PPGMS). 2022, updated 2024. **Harrison JP**, Allas A-L, Koivula H, Blankett R.
 
 2. [PerMedCoE D1.2 - Software best practices and optimisation interim report](https://permedcoe.eu/wp-content/uploads/2023/04/D1.2_Software-best-practices-and-optimisation-interim-report_V1.0_20220331.pdf). 2022. **Harrison JP**, Montagud A, Noël V, Rodríguez-Mier P, Kratochvil M.
 
