--- a/index.qmd
+++ b/index.qmd
@@ -31,7 +31,7 @@ I hold the title of Docent (Associate Professor) in Environmental Sciences at th
 
 #### **Further details**
 
--   [See my resume](static/harrison_resume.pdf) for more information.
+-   [See my resume](static/cv-web-nov25.pdf) for more information.
 -   I also have a [website for art](https://www.jesse-harrison.com/).
 
 ------------------------------------------------------------------------
