--- a/publications.qmd
+++ b/publications.qmd
@@ -2,14 +2,24 @@
 title: "Publications"
 ---
 
-**Further details**
+## Further details
 
 -   [Google Scholar](https://scholar.google.com/citations?user=ZqkvSqsAAAAJ)
 -   [ORCID](https://orcid.org/0000-0002-4877-4684)
 
+## Preprints
+
+<small>
+
+1\. [Discovering the unseen: a performance comparison of taxonomic classification methods for unknown DNA barcodes](https://www.biorxiv.org/content/10.1101/2025.10.13.681976v2.abstract). 2025. Orsholm J, Zito A, Somervuo P, **Harrison JP**, Koskela M, Ovaskainen O, Braga MP, Chazot N, Roslin T, Furneaux B. *bioRxiv* 2025.10.13.681976.
+</small>
+
 ## Peer-reviewed articles
 
 <small>
+
+25\. [A digital twin for real-time biodiversity forecasting with citizen science data](https://www.nature.com/articles/s41559-025-02966-3). 2026. 
+Ovaskainen O, Winter S, Tikhonov G, Lauha P, Lehtiö A, Nokelainen O, Abrego N, Aroluoma A, **Harrison JP**, Heikkinen M, Kallio A, Koliseva A, Lehikoinen A, Roslin T, Somervuo P, Souza AT, Tahir J, Talaskivi J, Turunen A, Vancraeyenest A, Zuquim G, Autto H, Hänninen J, Inkinen J, Kalttopää O, Koskinen J, Kotakorpi M, Kuntze K, Loehr J, Mutanen M, Oranen M, Paavola R, Renkonen R, Schiestl-Aalto P, Sipilä M, Sujala M, Sundell J, Tepsa S, Tuominen E‑P, Uusitalo J, Vallinmäki M, Vatka E, Veikkolainen S, Watts P C, Dunson D. *Nature Ecology and Evolution* https://doi.org/10.1038/s41559-025-02966-3.
 
 24\. [Developing Prototype Digital Twins for biodiversity conservation and management: achievements, challenges and perspectives](https://riojournal.com/article/133474/). 2024. Lecarpentier D, Biro T, Endresen D, Golivets M, Grimm V, Islam S, Koivula H, Pleiter D, Rossi T, Schigel D, Wohner C, Zuquim G, **Harrison JP**. *Research Ideas and Outcomes* 10:e133474.
 
